--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
   </div>
 </header>
 
-<main class="cv-container">
+<main class="cv-grid">
 
-  <!-- COLUMNA IZQUIERDA - INFORMACIÓN FIJA -->
-  <aside class="sidebar left-sidebar">
+  <!-- COLUMNA IZQUIERDA -->
+  <aside class="left">
+
     <section class="card card-orange" id="contacto-card">
       <h2 class="accordion-header" data-target="contacto-content">
         <span data-i18n="cont_title">Contacto</span>
@@ -70,17 +71,17 @@
       </h2>
       <div id="habilidades-content" class="accordion-content expanded">
         <div class="skills-grid">
-          <span class="skill-tag" data-i18n="hab1">Inglés B1</span>
-          <span class="skill-tag" data-i18n="hab2">Python</span>
-          <span class="skill-tag" data-i18n="hab3">JavaScript</span>
-          <span class="skill-tag" data-i18n="hab4">PHP</span>
-          <span class="skill-tag" data-i18n="hab5">Java</span>
-          <span class="skill-tag" data-i18n="hab6">HTML/CSS</span>
-          <span class="skill-tag" data-i18n="hab7">MySQL</span>
-          <span class="skill-tag" data-i18n="hab8">Firebase</span>
-          <span class="skill-tag" data-i18n="hab9">Flutter</span>
-          <span class="skill-tag" data-i18n="hab10">GitHub</span>
-          <span class="skill-tag" data-i18n="hab11">IoT</span>
+          <span class="skill-tag"><span data-i18n="hab1">Inglés B1</span></span>
+          <span class="skill-tag"><span data-i18n="hab2">Python</span></span>
+          <span class="skill-tag"><span data-i18n="hab3">JavaScript</span></span>
+          <span class="skill-tag"><span data-i18n="hab4">PHP</span></span>
+          <span class="skill-tag"><span data-i18n="hab5">Java</span></span>
+          <span class="skill-tag"><span data-i18n="hab6">HTML/CSS</span></span>
+          <span class="skill-tag"><span data-i18n="hab7">MySQL</span></span>
+          <span class="skill-tag"><span data-i18n="hab8">Firebase</span></span>
+          <span class="skill-tag"><span data-i18n="hab9">Flutter</span></span>
+          <span class="skill-tag"><span data-i18n="hab10">GitHub</span></span>
+          <span class="skill-tag"><span data-i18n="hab11">IoT</span></span>
         </div>
       </div>
     </section>
@@ -130,10 +131,9 @@
     </section>
   </aside>
 
-  <!-- COLUMNA CENTRAL - EXPERIENCIA PRINCIPAL -->
-  <section class="main-content">
+  <!-- COLUMNA CENTRAL -->
+  <section class="center">
 
-    <!-- PERFIL PROFESIONAL -->
     <section class="card" id="perfil-card">
       <h2 class="accordion-header" data-target="perfil-content">
         <span data-i18n="pp_title">Perfil Profesional</span>
@@ -146,7 +146,6 @@
       </div>
     </section>
 
-    <!-- EXPERIENCIA LABORAL -->
     <section class="card" id="experiencia-card">
       <h2 class="accordion-header" data-target="experiencia-content">
         <span data-i18n="EL_title">Experiencia Laboral</span>
@@ -154,7 +153,6 @@
       </h2>
       <div id="experiencia-content" class="accordion-content expanded">
 
-        <!-- Experiencia 1 - STRIDE -->
         <div class="experience-item">
           <h3 data-i18n="EL_sub1">Becario en Dirección Académica y Full Stack Developer - STRIDE</h3>
           <p class="date-location"><span class="date" data-i18n="fetch_sub1">UTMA | Mayo 2025 – Presente</span></p>
@@ -186,7 +184,6 @@
           </div>
         </div>
 
-        <!-- Experiencia 2 - SED -->
         <div class="experience-item">
           <h3 data-i18n="EL_sub2">Desarrollador Full Stack - SED</h3>
           <p class="date-location"><span class="date" data-i18n="fetch_sub2">UTMA | Enero – Abril 2025</span></p>
@@ -216,7 +213,6 @@
           </div>
         </div>
 
-        <!-- Experiencia 3 - CAFINCA -->
         <div class="experience-item">
           <h3 data-i18n="EL_sub3">Desarrollador Backend</h3>
           <p class="date-location"><span class="date" data-i18n="fetch_sub3">CAFINCA | Abril – Noviembre 2024</span></p>
@@ -231,7 +227,6 @@
           </div>
         </div>
 
-        <!-- Experiencia 4 - Club Campestre -->
         <div class="experience-item">
           <h3 data-i18n="EL_sub4">Desarrollador Web</h3>
           <p class="date-location"><span class="date" data-i18n="fetch_sub4">Club Campestre Aguascalientes | Abril – Agosto 2024</span></p>
@@ -262,7 +257,6 @@
       </div>
     </section>
 
-    <!-- ACTIVIDADES EXTRACURRICULARES -->
     <section class="card" id="extracurriculares-card">
       <h2 class="accordion-header" data-target="extracurriculares-content">
         <span data-i18n="AE_title">Actividades Extracurriculares</span>
@@ -270,7 +264,6 @@
       </h2>
       <div id="extracurriculares-content" class="accordion-content expanded">
 
-        <!-- NASA Space Apps -->
         <div class="experience-item">
           <h3 data-i18n="AE_sub1">Full Stack Developer - PIONEER</h3>
           <p class="date-location"><span class="date" data-i18n="AEfetch_sub1">NASA Space Apps Challenge – UNAQ | Octubre 2025</span></p>
@@ -298,7 +291,6 @@
           </div>
         </div>
 
-        <!-- HydroTalent 2025 -->
         <div class="experience-item">
           <h3 data-i18n="AE_sub2">Backend Developer - TRAMINET</h3>
           <p class="date-location"><span class="date" data-i18n="AEfetch_sub2">HydroTalent 2025 | Enero – Abril 2025</span></p>
@@ -328,7 +320,6 @@
           </div>
         </div>
 
-        <!-- FLISOL -->
         <div class="experience-item">
           <h3 data-i18n="AE_sub3">Speaker</h3>
           <p class="date-location"><span class="date" data-i18n="AEfetch_sub3">FLISOL 20° Aniversario – Bogotá, Colombia | Mayo 2024</span></p>
@@ -338,7 +329,6 @@
           </ul>
         </div>
 
-        <!-- HydroTalent 2023 -->
         <div class="experience-item">
           <h3 data-i18n="AE_sub4">Web Developer - FIREGUARD</h3>
           <p class="date-location"><span class="date" data-i18n="AEfetch_sub4">HydroTalent 2023 | Septiembre 2023</span></p>
@@ -358,7 +348,6 @@
           </div>
         </div>
 
-        <!-- Astro ICP Hackathon -->
         <div class="experience-item">
           <h3 data-i18n="AE_sub5">Web Developer - FIREGUARD</h3>
           <p class="date-location"><span class="date" data-i18n="AEfetch_sub5">Astro ICP Hackathon 2023 | Septiembre 2023</span></p>
